# qsyncable

./: .gitignore  .travis.yml  CMakeLists.txt  QSDiffRunner  QSListModel  QSTableModel  QSyncableConfig.cmake.in  README.md  checkindex.h  index.html  qml-applicationwindow-members.html  qml-applicationwindow.html  qml-applicationwindowstyle-members.html  qml-applicationwindowstyle.html  qml-blend-members.html  qml-blend.html  qml-brightnesscontrast-members.html  qml-brightnesscontrast.html  qml-busyindicator-members.html  qml-busyindicator.html  qml-busyindicatorstyle-members.html  qml-busyindicatorstyle.html  qml-button-members.html  qml-button.html  qml-buttonstyle-members.html  qml-buttonstyle.html  qml-calendar-members.html  qml-calendar.html  qml-calendarstyle-members.html  qml-calendarstyle.html  qml-checkbox-members.html  qml-checkbox.html  qml-checkboxstyle-members.html  qml-checkboxstyle.html  qml-circulargaugestyle-members.html  qml-circulargaugestyle.html  qml-colorize-members.html  qml-colorize.html  qml-coloroverlay-members.html  qml-coloroverlay.html  (+173 more)
.travis/: deploy_pages.sh
cmake/: ClangTidyConfig.cmake  CodeCoverageConfig.cmake  CompilerOptionsAndWarningsConfig.cmake  CppCheckConfig.cmake  DoxygenConfig.cmake  IncludeWhatYouUseConfig.cmake  Sanitizers.cmake  StandardProjectSettingsConfig.cmake
docs/: index.qdoc  qsyncable.qdocconf
examples/faketrello/: CMakeLists.txt  README.md  appdelegate.cpp  appdelegate.h  board.cpp  board.h  card.cpp  card.h  faketrello.pro  list.cpp  list.h  main.cpp  main.qml  qml.qrc
examples/faketrello/components/: FlatButton.qml
examples/faketrello/views/: Board.qml  Card.qml  CardList.qml  ToolBar.qml
priv/: qsalgotypes_p.h  qsdiffrunneralgo_p.h  qsfastdiffrunneralgo_p.h  qsimmutablewrapper_p.h  qstreenode.h
tests/qsyncableunittests/: SampleData1.json  benchmarktests.cpp  benchmarktests.h  fastdifftests.cpp  fastdifftests.h  immutabletype1.cpp  immutabletype1.h  immutabletype2.cpp  immutabletype2.h  immutabletype3.cpp  immutabletype3.h  integrationtests.cpp  integrationtests.h  main.cpp  qpm.json  qsyncabletests.cpp  qsyncabletests.h  qsyncableunittests.pro  test_Assign.qml  tst_QSyncable.qml  tst_jsonModel.qml  tst_uuid.qml
